@@ -1016,6 +1016,7 @@ nuttx-0.3.11 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  verified).
 	* Host simulator no longer uses Linux system calls directly; Now works with Cygwin.
 	* Fix an error that occurs when a POSIX timer is deleted by the timer signal handler.
+	* Add logic to allow the examples/ostest to be run repetitively as an endurance test.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
