@@ -311,7 +311,8 @@ CONFIG_NET_RESOLV_ENTRIES=4
 
 #
 # Settings for examples/ostest
-CONFIG_OSTEST_STACKSIZE=256
+CONFIG_EXAMPLES_OSTEST_LOOPS=1
+CONFIG_EXAMPLES_OSTEST_STACKSIZE=256
 
 #
 # Settings for examples/nsh
