@@ -366,3 +366,4 @@
 	  verified).
 	* Host simulator no longer uses Linux system calls directly; Now works with Cygwin.
 	* Fix an error that occurs when a POSIX timer is deleted by the timer signal handler.
+	* Add logic to allow the examples/ostest to be run repetitively as an endurance test.
